re PR target/59652 (ICE: in reload_cse_simplify_operands, at postreload.c:411)

PR target/59652
	* config/pa/pa.c (pa_legitimate_address_p): Return false before reload
	for 14-bit register offsets when INT14_OK_STRICT is false.

From-SVN: r206413